--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -1,8 +1,3 @@
-/* remember to change the size of images */
-/* remember to change the size of images */
-/* remember to change the size of images */
-/* remember to change the size of images */
-/* remember to change the size of images */
 
 
 
@@ -13,6 +8,7 @@
 *  {
   margin: 0;
   padding: 0;
+  border: 0;
 }
 
 html {
@@ -22,7 +18,9 @@ html {
 
 img { max-width: 100%; min-width: 30%; }
 
-
+ol, ul {
+  list-style: none;
+}
 
 
 
@@ -30,17 +28,143 @@ p {
   color:rgb(48, 47, 47, 0.80);
 }
 
-/* need fix */
 .all {
-  background-color: rgb(254, 255, 238);
-  border-color: black;
-  box-shadow: 5px 5px 5px lightgray;
-  margin: 1rem;
-  justify-content: center;
-  display: grid;
-  grid-template-columns: repeat(2fr);
-  grid-row-start: 2;
+  background-image: url(material/image/piano_classic.jpg);
+  background-size: 100%;
+  padding: 0.01rem;
+  height: 100%;
 }
+
+.headerbox {
+  background-color: rgba(170, 101, 36, 0.4);
+  box-sizing: border-box;
+  border: rgba(170, 101, 36, 0.4);
+  border-style: groove;
+  border-width: 1rem;
+  border-radius: 5rem 0;
+  color: antiquewhite;
+  font-family: 'kalamlight';
+  font-weight: lighter;
+  text-shadow: chartreuse;
+  text-align: center;
+  padding: 5rem;
+  margin: 8rem auto 14rem;
+  width: 50rem;
+  overflow: hidden;
+}
+
+select {
+  position: relative;
+  display: block;
+  width: 15rem;
+  height: 3rem;
+  margin: 0.2rem auto;
+  text-align: center;
+  font-family: 'courgetteregular', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+  font-size: 18px;
+  color: antiquewhite;
+  background-color: rgba(170, 101, 36, 0.6);
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  outline: 0;
+  flex: 1;
+  padding: 0 .5em;
+
+}
+
+.month, .day {
+  position: relative;
+  display: flex;
+  width: 20em;
+  height: 3em;
+  line-height: 3;
+  background: rgba(170, 101, 36, 0.6);
+  overflow: hidden;
+  border-radius: .25em;
+}
+
+
+button,
+button::after {
+  -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+button {
+  background: none;
+  border: 3px solid antiquewhite;
+  border-radius: 5px;
+  color: antiquewhite;
+  display: block;
+  font-size: 1em;
+  font-weight: bold;
+  margin: 1em auto;
+  padding: 1em 1.5em;
+  position: relative;
+  text-transform: uppercase;
+}
+
+button::before,
+button::after {
+  background: antiquewhite;
+  content: '';
+  position: absolute;
+  z-index: -1;
+}
+
+button:hover {
+  color: rgba(170, 101, 36, 0.6);
+}
+
+
+
+.button {
+  overflow: hidden;
+}
+
+.button::after {
+  height: 100%;
+  left: -35%;
+  top: 0;
+  transform: skew(50deg);
+  transition-duration: 0.6s;
+  transform-origin: top left;
+  width: 0;
+}
+
+.button:hover:after {
+  height: 100%;
+  width: 135%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
