--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -30,10 +30,13 @@ p {
 
 .all {
   background-image: url(material/image/piano_classic.jpg);
-  background-size: 100%;
+  background-size: cover;
+  background-position: center;
   padding: 0.01rem;
   height: 100%;
 }
+
+/* headerbox design start*/
 
 .headerbox {
   background-color: rgba(170, 101, 36, 0.4);
@@ -43,15 +46,25 @@ p {
   border-width: 1rem;
   border-radius: 5rem 0;
   color: antiquewhite;
-  font-family: 'kalamlight';
+  font-family: 'ArchisticoNormal';
   font-weight: lighter;
-  text-shadow: chartreuse;
   text-align: center;
-  padding: 5rem;
-  margin: 8rem auto 14rem;
+  padding: 3rem;
+  margin: 8rem auto 10rem;
   width: 50rem;
   overflow: hidden;
 }
+
+.snowman {
+  padding: 0.5rem;
+  margin-top: 0;
+}
+
+#birthday {
+  padding: 0.5rem 0;
+}
+
+/* birthdayform design */
 
 select {
   position: relative;
@@ -74,6 +87,8 @@ select {
 
 }
 
+
+
 .month, .day {
   position: relative;
   display: flex;
@@ -86,64 +101,48 @@ select {
 }
 
 
-button,
-button::after {
-  -webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-	transition: all 0.3s;
-}
+
+/* button part */
 
 button {
-  background: none;
-  border: 3px solid antiquewhite;
-  border-radius: 5px;
-  color: antiquewhite;
-  display: block;
-  font-size: 1em;
+	-webkit-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-moz-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-ms-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-o-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	display: block;
+	margin: 20px auto;
+	max-width: 180px;
+	text-decoration: none;
+  border-radius: 4px;
+  border: 0.1rem solid;
+  padding: 1.1rem 3rem;
+  font-size: 1.1rem;
   font-weight: bold;
-  margin: 1em auto;
-  padding: 1em 1.5em;
-  position: relative;
-  text-transform: uppercase;
+  cursor: pointer;
 }
-
-button::before,
-button::after {
-  background: antiquewhite;
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-button:hover {
-  color: rgba(170, 101, 36, 0.6);
-}
-
-
 
 .button {
-  overflow: hidden;
+  background-color: transparent;
+	color: antiquewhite;
+	box-shadow: antiquewhite 0 0 0 2px inset;
 }
 
-.button::after {
-  height: 100%;
-  left: -35%;
-  top: 0;
-  transform: skew(50deg);
-  transition-duration: 0.6s;
-  transform-origin: top left;
-  width: 0;
+.button:hover {
+  background-color: antiquewhite;
+	color: rgba(170, 101, 36, 0.7);
+	box-shadow: antiquewhite 0 0 0 80px inset;
 }
 
-.button:hover:after {
-  height: 100%;
-  width: 135%;
+.button:active {
+  background-color: rgba(170, 101, 36, 0.9);
+	color: antiquewhite;
+  box-shadow: rgba(170, 101, 36, 0.9) 0 0 0 80px inset;
+  transition: all 100ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+
 }
 
-
-
-
+/* headerbox design end */
 
 
 
