--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -33,7 +33,8 @@ p {
   background-size: cover;
   background-position: center;
   padding: 0.01rem;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 /* headerbox design start*/
@@ -49,21 +50,55 @@ p {
   font-family: 'ArchisticoNormal';
   font-weight: lighter;
   text-align: center;
-  padding: 3rem;
-  margin: 8rem auto 10rem;
+  position: relative;
+  padding: 2rem 1rem 2rem;
+  margin: 6.5rem auto;
   width: 50rem;
+  height: 32rem;
   overflow: hidden;
+  display: grid;
+  grid-template-columns: 30px 1fr 1fr 1fr 1fr 30px;
+  grid-template-rows: 50px 1fr 1fr 1fr 50px ;
+  justify-items: center;
+  align-items: center;
 }
+
+.enter {
+  grid-area: 2/2/6/4;
+
+}
+
+
 
 .snowman {
   padding: 0.5rem;
   margin-top: 0;
-  
+  grid-area: 1/2/2/6;
 }
 
 #birthday {
   padding: 0.5rem 0;
+  grid-area: 2/2/3/3;
 }
+
+.browse-banner {
+  grid-area: 2/4/6/6;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 40px;
+  /* margin: 0; */
+}
+     h2{
+        grid-area: 1/1/2/3;
+        justify-items: center;
+        padding-top: 2.9rem;
+        /* align-items: center; */
+    }
+    
+    .close {
+      padding-top: 1.1rem;
+      grid-area: 3/1/4/3;
+    }
 
 /* birthdayform design */
 
@@ -93,7 +128,7 @@ select {
 .month, .day {
   position: relative;
   display: flex;
-  width: 20em;
+  width: 15em;
   height: 3em;
   line-height: 3;
   background: rgba(170, 101, 36, 0.6);
@@ -117,7 +152,7 @@ button {
 	text-decoration: none;
   border-radius: 4px;
   border: 0.1rem solid;
-  padding: 1.1rem 3rem;
+  padding: 1rem 2.5rem;
   font-size: 1.1rem;
   font-weight: bold;
   cursor: pointer;
