--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -58,7 +58,7 @@ p {
   overflow: hidden;
   display: grid;
   grid-template-columns: 30px 1fr 1fr 1fr 1fr 30px;
-  grid-template-rows: 50px 1fr 1fr 1fr 50px ;
+  grid-template-rows: 50px 1fr 1fr 1fr 30px ;
   justify-items: center;
   align-items: center;
 }
@@ -85,20 +85,47 @@ p {
   grid-area: 2/4/6/6;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 40px;
+  grid-template-rows: 50px 1fr 1fr 40px;
+  justify-items: center;
+
   /* margin: 0; */
 }
      h2{
         grid-area: 1/1/2/3;
-        justify-items: center;
-        padding-top: 2.9rem;
+        padding-top: 0.7rem;
         /* align-items: center; */
     }
-    
-    .close {
+
+     #mozartsmall {
+      grid-area: 2/1/4/3;
+      width: 10rem;
+      height: 10rem;
+      padding: 1rem;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: 10px groove rgb(196, 129, 52);
+      transition: all 2s ease-in-out;
+      cursor: pointer;
+      background-image: url(material/image/mozartsmall.jpg);
+    }
+
+    #mozartsmall:hover {
+      background-image: url(material/image/mozartfunnysmall.png);
+      border: 10px ridge rgb(196, 129, 52);
+
+    }
+
+    .browse-banner h3 {
+      grid-area: 4/1/5/3;
+      text-align: center;
+      padding-top: 0.5rem;
+    }
+
+
+    /* .close {
       padding-top: 1.1rem;
       grid-area: 3/1/4/3;
-    }
+    } */
 
 /* birthdayform design */
 
