--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -51,8 +51,8 @@ p {
   font-weight: lighter;
   text-align: center;
   position: relative;
-  padding: 2rem 1rem 2rem;
-  margin: 6.5rem auto;
+  padding: 2.5rem 1rem 2rem;
+  margin: 7rem auto;
   width: 50rem;
   height: 32rem;
   overflow: hidden;
@@ -77,57 +77,18 @@ p {
 }
 
 #birthday {
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 1.5rem;
   grid-area: 2/2/3/3;
 }
 
-.browse-banner {
-  grid-area: 2/4/6/6;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 50px 1fr 1fr 40px;
-  justify-items: center;
-
-  /* margin: 0; */
-}
-     h2{
-        grid-area: 1/1/2/3;
-        padding-top: 0.7rem;
-        /* align-items: center; */
-    }
-
-     #mozartsmall {
-      grid-area: 2/1/4/3;
-      width: 10rem;
-      height: 10rem;
-      padding: 1rem;
-      background-size: cover;
-      background-repeat: no-repeat;
-      border: 10px groove rgb(196, 129, 52);
-      transition: all 2s ease-in-out;
-      cursor: pointer;
-      background-image: url(material/image/mozartsmall.jpg);
-    }
-
-    #mozartsmall:hover {
-      background-image: url(material/image/mozartfunnysmall.png);
-      border: 10px ridge rgb(196, 129, 52);
-
-    }
-
-    .browse-banner h3 {
-      grid-area: 4/1/5/3;
-      text-align: center;
-      padding-top: 0.5rem;
-    }
-
-
-    /* .close {
-      padding-top: 1.1rem;
-      grid-area: 3/1/4/3;
-    } */
-
 /* birthdayform design */
+
+.birthdayform {
+  padding-top: 1rem;
+}
+
+
+
 
 select {
   position: relative;
@@ -163,9 +124,11 @@ select {
   border-radius: .25em;
 }
 
+/* 
+---------------------
+button part
+------------------------ */
 
-
-/* button part */
 
 button {
 	-webkit-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
@@ -174,7 +137,7 @@ button {
 	-o-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 	transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 	display: block;
-	margin: 20px auto;
+	margin: 2.8rem auto 0;
 	max-width: 180px;
 	text-decoration: none;
   border-radius: 4px;
@@ -204,6 +167,61 @@ button {
   transition: all 100ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 
 }
+
+
+
+/* -------------------------
+      browse-banner
+------------------------- */
+
+.browse-banner {
+  grid-area: 2/4/6/6;
+  padding-bottom: 0.8rem;
+  width: 15rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 50px 1fr 1fr 40px;
+  justify-items: center;
+
+  /* margin: 0; */
+}
+     h2{
+        grid-area: 1/1/2/3;
+        padding-top: 0.7rem;
+        /* align-items: center; */
+    }
+
+     #mozartsmall {
+      grid-area: 2/1/4/3;
+      width: 13rem;
+      height: 13rem;
+      padding: 1rem;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: 10px groove rgb(196, 129, 52);
+      transition: all 2s ease-in-out;
+      cursor: pointer;
+      background-image: url(material/image/mozartsmall.jpg);
+    }
+
+    #mozartsmall:hover {
+      background-image: url(material/image/mozartfunnysmall.png);
+      border: 10px ridge rgb(196, 129, 52);
+
+    }
+
+    .browse-banner h3 {
+      grid-area: 4/1/5/3;
+      text-align: center;
+      padding-top: 0.5rem;
+    }
+
+
+    /* .close {
+      padding-top: 1.1rem;
+      grid-area: 3/1/4/3;
+    } */
+
 
 /* headerbox design end */
 
