--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -52,7 +52,7 @@ p {
   text-align: center;
   position: relative;
   padding: 2.5rem 1rem 2rem;
-  margin: 7rem auto;
+  margin: 3rem auto;
   width: 50rem;
   height: 32rem;
   overflow: hidden;
@@ -61,6 +61,8 @@ p {
   grid-template-rows: 50px 1fr 1fr 1fr 30px ;
   justify-items: center;
   align-items: center;
+  z-index: 99;
+
 }
 
 .enter {
@@ -129,6 +131,17 @@ select {
 button part
 ------------------------ */
 
+#modal-open {
+  font-size: 1rem;
+  padding: 0.8rem;
+  margin-top: 1rem;
+  z-index: 90;
+}
+
+.hidden {
+	display: none !important;
+}
+
 
 button {
 	-webkit-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
@@ -182,7 +195,7 @@ button {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 50px 1fr 1fr 40px;
   justify-items: center;
-
+  transition: all 2s ease-in-out;
   /* margin: 0; */
 }
      h2{
@@ -191,7 +204,7 @@ button {
         /* align-items: center; */
     }
 
-     #mozartsmall {
+     .mozartsmall {
       grid-area: 2/1/4/3;
       width: 13rem;
       height: 13rem;
@@ -204,7 +217,7 @@ button {
       background-image: url(material/image/mozartsmall.jpg);
     }
 
-    #mozartsmall:hover {
+    .mozartsmall:hover {
       background-image: url(material/image/mozartfunnysmall.png);
       border: 10px ridge rgb(196, 129, 52);
 
