--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -1,3 +1,14 @@
+/* ----------------------
+test test test
+--------------------- */
+
+.transparent {
+  background: transparent !important;
+}
+
+/* ----------------------
+test
+--------------------- */
 
 
 
@@ -35,12 +46,20 @@ p {
   padding: 0.01rem;
   height: 100vh;
   width: 100vw;
+  display: grid;
+  grid-template-columns: 7rem 1fr 1fr 1fr 1fr 1fr 1fr 1fr 7rem;
+  grid-template-rows: 7rem 1fr 1fr 1fr 1fr 1fr 7rem;
 }
+
+/* .noscroll {
+  overflow: hidden;
+} */
 
 /* headerbox design start*/
 
 .headerbox {
-  background-color: rgba(170, 101, 36, 0.4);
+  /* background-color: rgba(170, 101, 36, 0.4); */
+  background: radial-gradient( rgba(204, 146, 71, 0.39), rgba(182, 122, 43, 0.304) ), url(material/image/piano_classic.jpg);
   box-sizing: border-box;
   border: rgba(170, 101, 36, 0.4);
   border-style: groove;
@@ -52,7 +71,7 @@ p {
   text-align: center;
   position: relative;
   padding: 2.5rem 1rem 2rem;
-  margin: 3rem auto;
+  margin: 0.2rem auto;
   width: 50rem;
   height: 32rem;
   overflow: hidden;
@@ -62,7 +81,7 @@ p {
   justify-items: center;
   align-items: center;
   z-index: 99;
-
+  grid-area: 2/2/7/9;
 }
 
 .enter {
@@ -134,8 +153,12 @@ button part
 #modal-open {
   font-size: 1rem;
   padding: 0.8rem;
-  margin-top: 1rem;
-  z-index: 90;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  /* z-index: 90; */
+  /* position: relative; */
+  grid-area: 1/4/2/7;
+
 }
 
 .hidden {
@@ -144,17 +167,17 @@ button part
 
 
 button {
-	-webkit-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-moz-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-ms-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-o-transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	transition: all 900ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	-webkit-transition: all 900ms cubic-bezier(0.390, 0.500, 0.850, 1.360);
+	-moz-transition: all 900ms cubic-bezier(0.390, 0.500, 0.850, 1.360);
+	-ms-transition: all 900ms cubic-bezier(0.390, 0.500, 0.850, 1.360);
+	-o-transition: all 900ms cubic-bezier(0.390, 0.500, 0.850, 1.360);
+	transition: all 900ms cubic-bezier(0.390, 0.500, 0.850, 1.360);
 	display: block;
 	margin: 2.8rem auto 0;
 	max-width: 180px;
 	text-decoration: none;
   border-radius: 4px;
-  border: 0.1rem solid;
+  border: 2px solid;
   padding: 1rem 2.5rem;
   font-size: 1.1rem;
   font-weight: bold;
@@ -177,7 +200,7 @@ button {
   background-color: rgba(170, 101, 36, 0.9);
 	color: antiquewhite;
   box-shadow: rgba(170, 101, 36, 0.9) 0 0 0 80px inset;
-  transition: all 100ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 100ms cubic-bezier(0.390, 0.500, 0.850, 1.360);
 
 }
 
@@ -235,8 +258,172 @@ button {
       grid-area: 3/1/4/3;
     } */
 
+/* ----------------------------
+headerbox design end
+------------------------------ */
 
-/* headerbox design end */
+
+/* 
+-------------------
+musican 
+------------------- */
+
+main {
+  grid-area: 2/2/7/9;
+  z-index: 50;
+}
+
+.musician {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 100px 1fr 1fr 1fr 1fr 100px;
+  grid-template-rows: 50px 1fr 1fr 1fr 50px;
+  grid-gap: 10px;
+  grid-template-areas: 
+  " .  .  .  .  .  . "
+  " . m1 m2 m3 m4 . "
+  " . m5 m6 m7 m8 . "
+  " . m9 m10 m11 m12 . "
+  ".  .  .  .  .  . "
+  /* ".  .  .  .  .  . " */
+    ;
+    margin: 0.2rem auto;
+    width: 50rem;
+    height: 32rem;
+
+}
+
+#m1 {
+  grid-area: m1;
+}
+
+#m2{
+  grid-area: m2;
+}
+
+
+#m3 {
+  grid-area: m3;
+}
+
+
+#m4 {
+  grid-area: m4;
+}
+
+#m5 {
+  grid-area: m5;
+}
+
+#m6 {
+  grid-area: m6;
+}
+
+#m7 {
+  grid-area: m7;
+}
+
+#m8 {
+  grid-area: m8;
+}
+
+#m9 {
+  grid-area: m9;
+}
+
+#m10 {
+  grid-area: m10;
+}
+
+#m11 {
+  grid-area: m11;
+}
+
+#m12 {
+  grid-area: m12;
+}
+
+div.musician-banner ul li, div.musician-banner li  {
+	-webkit-transition: all 0.8s ease-in-out;
+  	-moz-transition: all 0.8s ease-in-out;
+  	-o-transition: all 0.8s ease-in-out;
+    transition: all 0.8s ease-in-out;
+    transform-style: preserve-3d;
+
+}
+
+div.musician-banner ul li {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	margin: 5px;
+	padding: 5px;
+  z-index: 0;
+  overflow: hidden;
+	border: 5px solid #dddddd;
+	padding: 5px;
+	width: 130px;
+  height: 130px;
+}
+
+
+/* -----------------
+rotate
+----------------- */
+
+.musician li {
+
+  perspective: 500px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.musician li:hover .card {
+  transform: rotateY( 180deg ) ;
+  transition: transform 0.8s;
+}
+
+.frontface,
+.backface {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
+  color: #03446A;
+  font-size: 60px;
+  border-radius: 5px;
+  backface-visibility: hidden;
+}
+
+.backface {
+  background: rgba(223, 156, 117, 0.7);
+  color: rgb(148, 74, 52);
+  transform: rotateY( 180deg );
+  text-align: center;
+  
+}
+
+h3 {
+  padding-top: 2.4rem;
+  font-size: 1.3rem;
+  font-family: 'courgetteregular', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+}
+
+/* div.frontface {
+
+}
+
+div.backface {
+
+
+} */
+
+
 
 
 
