--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -57,7 +57,16 @@ p {
 
 /* headerbox design start*/
 
-.headerbox {
+@keyframes headerboxin {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+div.headerbox {
   /* background-color: rgba(170, 101, 36, 0.4); */
   background: radial-gradient( rgba(204, 146, 71, 0.39), rgba(182, 122, 43, 0.304) ), url(material/image/piano_classic.jpg);
   box-sizing: border-box;
@@ -82,6 +91,8 @@ p {
   align-items: center;
   z-index: 99;
   grid-area: 2/2/7/9;
+  animation: headerboxin 1s ease-in-out forwards;
+  transition: all 1s ease-in-out 1s;
 }
 
 .enter {
@@ -290,6 +301,7 @@ main {
     margin: 0.2rem auto;
     width: 50rem;
     height: 32rem;
+    animation: headerboxin 1s ease-in-out forwards;
 
 }
 
@@ -372,7 +384,7 @@ rotate
 ----------------- */
 
 .musician li {
-
+  cursor: pointer;
   perspective: 500px;
 }
 
