--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -448,7 +448,20 @@ musician card
   height: 100%;
 }
 
-
+.musician-infor {
+  display: grid;
+  grid-template-columns: 100px 1fr 1fr 1fr 1fr 100px;
+  grid-template-rows: 50px 1fr 1fr 1fr 50px;
+  grid-gap: 10px;
+  /* grid-template-areas: 
+  " .  .  .  .  .  . "
+  " . m1 m2 m3 m4 . "
+  " . m5 m6 m7 m8 . "
+  " . m9 m10 m11 m12 . "
+  ".  .  .  .  .  . " */
+  /* ".  .  .  .  .  . " */
+    ;
+}
 
 
 
