--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -25,6 +25,7 @@ test
 html {
   color: #2b2b2b;
   font-size: 100%;
+  scroll-behavior: smooth;
 }
 
 img { max-width: 100%; min-width: 30%; }
@@ -160,6 +161,9 @@ select {
 
 }
 
+.option {
+  font-size: 0.5rem;
+}
 
 
 .month, .day {
@@ -460,27 +464,21 @@ div.backface {
 musician card
 ----------------------- */
 
-.musician-content {
-  width: 100%;
-  height: 100%;
-}
-
-.musician-infor {
+.infor-box {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(255, 228, 196, 0.5);
+  z-index: 100;
   display: grid;
   grid-template-columns: 100px 1fr 1fr 1fr 1fr 100px;
   grid-template-rows: 50px 1fr 1fr 1fr 50px;
   grid-gap: 10px;
-  /* grid-template-areas: 
-  " .  .  .  .  .  . "
-  " . m1 m2 m3 m4 . "
-  " . m5 m6 m7 m8 . "
-  " . m9 m10 m11 m12 . "
-  ".  .  .  .  .  . " */
-  /* ".  .  .  .  .  . " */
-    ;
+  text-align: center;
+  overflow: hidden;
+  justify-items: center;
+  align-items: center;
+  transition: all 1s ease-in-out 1s;
 }
-
-
 
 
 
