--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -480,9 +480,35 @@ musician card
   transition: all 1s ease-in-out 1s;
 }
 
+.infor-container {
+  grid-area: 2/2/5/6;
+  background-color: rgb(222, 184, 135, 0.5);
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 50px  1fr 1fr 1fr 1fr 50px;
+  grid-template-rows: 30px 1fr 1fr 1fr 1fr 30px;
+  grid-gap: 10px;
+  justify-items: center;
+  align-items: center;
+}
 
+.thisimage {
+  background-color: rgb(95, 158, 160, 0.3);
+  background-size: 30%;
+  grid-area: 2/2/6/4;
+  width: 100%;
+  height: 100%;
+  max-width: 70%;
+  max-height: 80%;
+  border-image: url(material/image/wooddesignpng1.png);
+  border-image-slice: 10%;
+  border-width: 60px;
+  border-style: solid;
 
+  /* margin: 4rem; */
 
+}
 
 
 
