--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -199,7 +199,13 @@ button part
 }
 
 .hidden {
-	display: none !important;
+  display: none !important;
+  transition-delay: 1s;
+}
+
+.layback {
+  z-index: -1!important;
+  opacity: 0;
 }
 
 
@@ -467,17 +473,34 @@ musician card
 .infor-box {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(255, 228, 196, 0.5);
+  background-color: #8d64323d; 
   z-index: 100;
   display: grid;
   grid-template-columns: 100px 1fr 1fr 1fr 1fr 100px;
   grid-template-rows: 50px 1fr 1fr 1fr 50px;
-  grid-gap: 10px;
   text-align: center;
   overflow: hidden;
   justify-items: center;
   align-items: center;
   /* transition: all 1s ease-in-out 1s; */
+}
+
+.closeinfor {
+  grid-area: 1/6/-5/-1;
+  background-image: url(material/image/frame/trebleclef256.png);
+  width: 50%;
+  height: 100%;
+  z-index: 200;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: top;
+  position: relative;
+  margin: 1rem 0rem 0rem 1rem;
+  /* margin-top: 2rem;
+  margin-right: 2rem; */
+  filter: brightness(1);
+  cursor: pointer;
 }
 
 .infor-container {
@@ -533,13 +556,42 @@ image left
 information
 ---------------------- */
 
+.infor-content {
+  grid-area: 2/4/6/6;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(240, 128, 128, 0.664);
+  display: grid;
+  grid-template-columns: 50px  1fr 1fr  1fr 50px;
+  grid-template-rows: 30px 1fr 1fr  1fr 30px;
+  grid-gap: 10px;
+}
 
+.thisname {
+  grid-area: 2/2/3/5;
+  align-self: flex-start;
+  background-color: rgba(144, 238, 144, 0.5);
+}
 
+.thismusic {
+  grid-area: 2/2/3/5;
+  align-self: flex-end;
+  background-color: rgba(135, 206, 250, 0.664);
+}
 
+.thissound {
+  display: block;
+  grid-area: 2/2/3/5;
+  align-self: center;
+  height: 10px;
+  background-color: rgba(25, 25, 112, 0.514);
+}
 
-
-
-
+.thisdescription {
+  margin: 1rem;
+  grid-area: 3/2/5/5;
+  background-color: rgba(255, 0, 255, 0.384);
+}
 
 
 
