--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -333,14 +333,15 @@ main {
   /* ".  .  .  .  .  . " */
     ;
     margin: 0.2rem auto;
-    width: 50rem;
-    height: 32rem;
+    width: 100%;
+    height: 100%;
     animation: headerboxin 1s ease-in-out forwards;
 
 }
 
 #m1 {
   grid-area: m1;
+  /* grid-area: 2/2/3/3; */
 }
 
 #m2{
