--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -333,8 +333,8 @@ main {
   /* ".  .  .  .  .  . " */
     ;
     margin: 0.2rem auto;
-    width: 100%;
-    height: 100%;
+    width: 50rem;
+    height: 36rem;
     animation: headerboxin 1s ease-in-out forwards;
 
 }
