--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -330,7 +330,7 @@ main {
   " . m5 m6 m7 m8 . "
   " . m9 m10 m11 m12 . "
   ".  .  .  .  .  . "
-  /* ".  .  .  .  .  . " */
+  ".  .  .  .  .  . "
     ;
     margin: 0.2rem auto;
     width: 50rem;
@@ -346,48 +346,69 @@ main {
 
 #m2{
   grid-area: m2;
+  /* grid-area: 2/3/3/4; */
 }
 
 
 #m3 {
   grid-area: m3;
+  /* grid-area: 2/4/3/5; */
+
 }
 
 
 #m4 {
   grid-area: m4;
+  /* grid-area: 2/5/3/6; */
+
 }
 
 #m5 {
   grid-area: m5;
+  /* grid-area: 3/2/4/3; */
+
 }
 
 #m6 {
   grid-area: m6;
+  /* grid-area: 3/3/4/4; */
+
 }
 
 #m7 {
   grid-area: m7;
+  /* grid-area: 3/4/4/5; */
+
 }
 
 #m8 {
   grid-area: m8;
+  /* grid-area: 3/5/4/6; */
+
 }
 
 #m9 {
   grid-area: m9;
+  /* grid-area: 4/2/5/3; */
+
 }
 
 #m10 {
   grid-area: m10;
+  /* grid-area: 4/3/5/4; */
+
 }
 
 #m11 {
   grid-area: m11;
+  /* grid-area: 4/4/5/5; */
+
 }
 
 #m12 {
   grid-area: m12;
+  /* grid-area: 4/5/5/6; */
+
 }
 
 div.musician-banner ul li, div.musician-banner li  {
@@ -476,7 +497,7 @@ musician card
 .infor-box {
   width: 100vw;
   height: 100vh;
-  background-color: #8d64323d; 
+  background-color: #22212085; 
   z-index: 100;
   display: grid;
   grid-template-columns: 100px 1fr 1fr 1fr 1fr 100px;
@@ -508,7 +529,7 @@ musician card
 
 .infor-container {
   grid-area: 2/2/5/6;
-  background-color: rgb(222, 184, 135, 0.5);
+  /* background-color: rgba(190, 185, 178, 0.5); */
   width: 100%;
   height: 100%;
   display: grid;
