--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -574,7 +574,9 @@ image left
   grid-area: 1/1/2/2;
   z-index: 50;
   width: 85%;
+  height: 65%;
   padding-top: 13%;
+  padding-bottom: 0%;
 }
 
 /* ------------------
