--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -612,6 +612,7 @@ information
 .thismusic {
   grid-area: 2/2/3/5;
   align-self: flex-end;
+  justify-self: self-end;
   font-family: 'BeryliumBd' ;
   font-size: 2rem;
   /* background-color: rgba(135, 206, 250, 0.664); */
@@ -632,23 +633,23 @@ information
   color: antiquewhite;
 }
 
-.music-animation .on .bar{
+.on .bar{
       animation: bar 1.2s infinite;
     }
 
-.music-animation .on .bar2{
+.on .bar2{
       animation-delay: .1s;
     }
 
-.music-animation .on .bar3{
+.on .bar3{
       animation-delay: .2s;
     }
 
-.music-animation .on .bar4{
+.on .bar4{
       animation-delay: .3s;
     }
 
-.music-animation .on .bar5{
+.on .bar5{
       animation-delay: .4s;
     }
   
@@ -658,23 +659,20 @@ information
 .music-toggle{
   cursor: pointer;
   font-size: 20px;
-}
-
-.music-toggle{
-    display: block;
-    width: 30%;
-    transition: .2s;
+  display: block;
+  width: 30%;
+  transition: .2s;
+  position: relative;
   }
 
 .music-toggle:hover{
   border: 1px solid azure ;
-
   }
 
 
 .bar{
   width: 3px;
-  background-color: rgb(168, 75, 75);
+  background-color: rgb(116, 40, 40);
   height: 10px;
   display: block;
   margin: 0 2px; 
