--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -594,7 +594,7 @@ information
   border-radius: 40%;
   display: grid;
   grid-template-columns: 50px  1fr 1fr  1fr 50px;
-  grid-template-rows: 30px 100px 1fr  1fr 30px;
+  grid-template-rows: 1px 100px 1fr  1fr 30px;
   grid-gap: 10px;
   color: antiquewhite;
   margin-right: 10rem;
@@ -604,30 +604,34 @@ information
 .thisname {
   grid-area: 2/2/3/5;
   align-self: flex-start;
-  font-family: 'ArchisticoNormal' ;
-  font-size: 2.1rem;
+  font-family: 'courgetteregular' ;
+  font-size: 2.5rem;
   /* background-color: rgba(144, 238, 144, 0.5); */
-}
-
-.thismusic {
-  grid-area: 2/2/3/5;
-  align-self: flex-end;
-  justify-self: self-end;
-  font-family: 'BeryliumBd' ;
-  font-size: 2rem;
-  /* background-color: rgba(135, 206, 250, 0.664); */
-
 }
 
 .play-music {
   grid-area: 2/2/3/5;
   margin-top: 2rem;
-  font-family: 'Areson' ;
+  display: grid;
+  grid-template-columns: 30px 120px 1fr;
+  grid-template-rows: 1fr;
+  width: 100%;
+}
+
+.thismusic {
+  grid-area: 1/3/2/4;
+  align-self: flex-end;
+  justify-self: self-end;
+  font-family: 'BeryliumRegIt' ;
   font-size: 2rem;
+  padding: 0!important;
+  /* background-color: rgba(135, 206, 250, 0.664); */
+
 }
 
 .music-animation{
-  margin-top: 3rem;
+  grid-area: 1/1/2/2;
+  margin-top: 2.8rem;
   display: flex;
   position: relative;
   color: antiquewhite;
@@ -638,15 +642,15 @@ information
     }
 
 .on .bar2{
-      animation-delay: .1s;
-    }
-
-.on .bar3{
       animation-delay: .2s;
     }
 
+.on .bar3{
+      animation-delay: .1s;
+    }
+
 .on .bar4{
-      animation-delay: .3s;
+      animation-delay: .5s;
     }
 
 .on .bar5{
@@ -657,26 +661,48 @@ information
 
 
 .music-toggle{
+  grid-area: 1/2/2/3;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1.2rem;
   display: block;
-  width: 30%;
+  align-self: flex-end;
+  width: 100%;
   transition: .2s;
   position: relative;
+  padding: 0.5rem 0.8rem 0;
+  margin: 0.5rem 0.5rem 0;
+  font-family: 'BaroneysTextured' ;
+  font-size: 1.8rem;
   }
 
 .music-toggle:hover{
-  border: 1px solid azure ;
-  }
-
+  animation: borderout 1s ease-in-out 500ms infinite;  
+}
 
 .bar{
   width: 3px;
-  background-color: rgb(116, 40, 40);
-  height: 10px;
+  background-color: burlywood;
+  height: 1px;
   display: block;
-  margin: 0 2px; 
+  margin: 0 1.5px; 
 }
+
+@keyframes borderout{
+  0%{
+    border-left: 3px dotted rgba(255, 236, 242, 0.589);
+  }
+  25%{
+    border-bottom: 3px dotted rgba(255, 240, 245, 0.534);
+  }
+  75%{
+    border-right: 3px dotted rgba(255, 240, 245, 0.247);
+  }
+  100%{
+    border-top: 3px dotted rgba(255, 240, 245, 0.247);
+  }
+}
+
+
 
 
 @keyframes bar{
@@ -693,13 +719,13 @@ information
 
 
 @keyframes play {
-   100% { transform: translateX(-2400px); }
+   100% { transform: translateX(2400px); }
 }
 
 
 .thisaudio {
   /* display: block; */
-  grid-area: 2/2/3/5;
+  grid-area: 1/1/2/4;
   align-self: center;
   height: 0rem;
 }
@@ -720,14 +746,14 @@ information
   width: 100%;
   height: 50%;
   color: antiquewhite;
-
-  /* position: absolute; */
+  position: relative;
 }
 
 .thisdescription-i {
-  /* margin-top: 3rem; */
+  margin-bottom: 50%;
   color: antiquewhite;
-  position: static;
+  position: relative;
+  margin-top: -4rem;
 
   /* position: absolute; */
 }
