--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -339,73 +339,73 @@ main {
 
 }
 
-#m1 {
+.m1 {
   grid-area: m1;
   /* grid-area: 2/2/3/3; */
 }
 
-#m2{
+.m2{
   grid-area: m2;
   /* grid-area: 2/3/3/4; */
 }
 
 
-#m3 {
+.m3 {
   grid-area: m3;
   /* grid-area: 2/4/3/5; */
 
 }
 
 
-#m4 {
+.m4 {
   grid-area: m4;
   /* grid-area: 2/5/3/6; */
 
 }
 
-#m5 {
+.m5 {
   grid-area: m5;
   /* grid-area: 3/2/4/3; */
 
 }
 
-#m6 {
+.m6 {
   grid-area: m6;
   /* grid-area: 3/3/4/4; */
 
 }
 
-#m7 {
+.m7 {
   grid-area: m7;
   /* grid-area: 3/4/4/5; */
 
 }
 
-#m8 {
+.m8 {
   grid-area: m8;
   /* grid-area: 3/5/4/6; */
 
 }
 
-#m9 {
+.m9 {
   grid-area: m9;
   /* grid-area: 4/2/5/3; */
 
 }
 
-#m10 {
+.m10 {
   grid-area: m10;
   /* grid-area: 4/3/5/4; */
 
 }
 
-#m11 {
+.m11 {
   grid-area: m11;
   /* grid-area: 4/4/5/5; */
 
 }
 
-#m12 {
+.m12 {
   grid-area: m12;
   /* grid-area: 4/5/5/6; */
 
@@ -604,8 +604,9 @@ information
 .thisname {
   grid-area: 2/2/3/5;
   align-self: flex-start;
-  font-family: 'courgetteregular' ;
-  font-size: 2.5rem;
+  /* font-family: 'courgetteregular' ; */
+  font-size: 2rem;
+  color: antiquewhite;
   /* background-color: rgba(144, 238, 144, 0.5); */
 }
 
@@ -613,13 +614,13 @@ information
   grid-area: 2/2/3/5;
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: 30px 120px 1fr;
+  grid-template-columns: 15px 30px 120px 1fr 15px;
   grid-template-rows: 1fr;
   width: 100%;
 }
 
 .thismusic {
-  grid-area: 1/3/2/4;
+  grid-area: 1/4/2/5;
   align-self: flex-end;
   justify-self: self-end;
   font-family: 'BeryliumRegIt' ;
@@ -630,7 +631,7 @@ information
 }
 
 .music-animation{
-  grid-area: 1/1/2/2;
+  grid-area: 1/2/2/3;
   margin-top: 2.8rem;
   display: flex;
   position: relative;
@@ -661,7 +662,7 @@ information
 
 
 .music-toggle{
-  grid-area: 1/2/2/3;
+  grid-area: 1/3/2/4;
   cursor: pointer;
   font-size: 1.2rem;
   display: block;
@@ -680,7 +681,7 @@ information
 }
 
 .bar{
-  width: 3px;
+  width: 2px;
   background-color: burlywood;
   height: 1px;
   display: block;
@@ -725,7 +726,7 @@ information
 
 .thisaudio {
   /* display: block; */
-  grid-area: 1/1/2/4;
+  grid-area: 1/1/2/5;
   align-self: center;
   height: 0rem;
 }
