--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -624,8 +624,8 @@ information
   align-self: flex-end;
   justify-self: self-end;
   font-family: 'BeryliumRegIt' ;
-  font-size: 2rem;
-  padding: 0!important;
+  font-size: 100%;
+  padding-bottom: 0.5rem;
   /* background-color: rgba(135, 206, 250, 0.664); */
 
 }
