--- a/project/zodiacstylesheet.css
+++ b/project/zodiacstylesheet.css
@@ -483,15 +483,19 @@ input {
   font-size: 1.3rem;
 }
 
+.middle {
+  font-size: 1.1rem ;
+}
+
+.small{
+  font-size: 1rem ;
+}
+
 /* h3 {
   padding-top: 2.4rem;
   font-size: 1.3rem;
   font-family: 'courgetteregular', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
 } */
-
-
-
-
 
 /* ---------------------------
 musician card
@@ -512,8 +516,6 @@ musician card
   font-family: 'ArchisticoNormal';
   /* transition: all 1s ease-in-out 1s; */
 }
-
-
 
 .closeinfor {
   grid-area: 1/6/-5/-1;
@@ -549,8 +551,6 @@ musician card
 /* ----------------
 image left 
 ------------------ */
-
-
 
 .imageframe-box {
   grid-area: 2/2/6/4;
@@ -661,9 +661,6 @@ information
       animation-delay: .4s;
     }
   
-
-
-
 .music-toggle{
   grid-area: 1/3/2/4;
   cursor: pointer;
@@ -700,9 +697,6 @@ information
     border-left: 4px dashed rgb(255, 222, 233, 0.8);
   }
 }
-
-
-
 
 @keyframes bar{
   0%{
